# Group2

./: CMakeLists.txt
src/: CMakeLists.txt  Client.cpp  ClientManager.cpp  HttpPacket.cpp  HttpRouterHandler.cpp  RequestParser.cpp
src/include/: HttpPacket.h  HttpResponsePacket.h
src/test/: TestRequestParser.h
tests/: CMakeLists.txt
